--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Website đầu tiên của tôi</title>
+  <title>😤😤😤😤😤😤😤</title>
 </head>
 <body>
   <h1>Chào mừng bạn đến với website của tôi!</h1>
