--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>😤😤😤😤😤😤😤</title>
-</head>
-<body>
-  <h1>Chào mừng bạn đến với website của tôi!</h1>
-  <p>Đây là trang web đầu tiên mình tạo với GitHub Pages.</p>
-</body>
-</html>
+<p>TÔI LÀ HUỲNH KIM ĐĂNG KHOA - SỐ ĐIỆN THOẠI: 0876666784</p>
