--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>TÔI LÀ HUỲNH KIM ĐĂNG KHOA - SỐ ĐIỆN THOẠI: 0876666784</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Giới thiệu</title>
+</head>
+<body>
+    <p>TÔI LÀ HUỲNH KIM ĐĂNG KHOA - SỐ ĐIỆN THOẠI: 0876666784</p>
+</body>
+</html>
